fix: adjust coveñas 2nd part

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -294,7 +294,7 @@
               </div>
 
               <div class="px-1">
-                <h6 class="m-0">Emisiones GEI 2022</h6>
+                <h6 class="m-0">Emisiones GEI</h6>
                 <p class="number-large font-weight-bold">2.381</p>
                 <p class="text-gray-light-ocensa">TonCO2e</p>
                 <span
@@ -980,8 +980,8 @@
                       </div>
                       <div class="card-interactive-icons___box-description">
                         <p>
+                          Emisión<br />
                           Ruido<br />
-                          Ambiental<br />
                         </p>
                       </div>
                     </div>
@@ -2960,7 +2960,7 @@
                     <div
                       data-target="covenas-operaciones-13"
                       style="gap: 16px"
-                      class="d-flex align-items-center card-interactive-icons__container mt-1"
+                      class="d-flex align-items-center card-interactive-icons__container"
                     >
                       <div
                         class="card-interactive-icons___box-icon small"
@@ -3859,8 +3859,7 @@
                       <div class="card-interactive-icons___box-description">
                         <p>
                           Tanques de <br />
-                          Almacenamiento <br />
-                          de Crudo
+                          Almacenamiento de Crudo
                         </p>
                       </div>
                     </div>
@@ -4189,13 +4188,11 @@
                         </p>
                       </div>
                     </div>
-                  </div>
 
-                  <div class="col-12 col-lg-6">
                     <div
                       data-target="covenas-operaciones-29"
                       style="gap: 16px"
-                      class="d-flex align-items-center card-interactive-icons__container"
+                      class="d-flex align-items-center card-interactive-icons__container mt-1"
                     >
                       <div
                         class="card-interactive-icons___box-icon small"
@@ -4374,11 +4371,14 @@
                         <p>Cuarto Eléctrico</p>
                       </div>
                     </div>
+                  </div>
+
+                  <div class="col-12 col-lg-6">
 
                     <div
                       data-target="covenas-operaciones-32"
                       style="gap: 16px"
-                      class="d-flex align-items-center card-interactive-icons__container mt-1"
+                      class="d-flex align-items-center card-interactive-icons__container"
                     >
                       <div
                         class="card-interactive-icons___box-icon small"
@@ -4404,13 +4404,10 @@
                         </p>
                       </div>
                     </div>
-                  </div>
-
-                  <div class="col-12 col-lg-6 mt-1 mt-lg-2">
                     <div
                       data-target="covenas-operaciones-33"
                       style="gap: 16px"
-                      class="d-flex align-items-center card-interactive-icons__container"
+                      class="d-flex align-items-center card-interactive-icons__container mt-1"
                     >
                       <div
                         class="card-interactive-icons___box-icon small"
@@ -4583,9 +4580,7 @@
                         <p>Antenas de Comunicación</p>
                       </div>
                     </div>
-                  </div>
 
-                  <div class="col-12 col-lg-6 mt-1 mt-lg-2">
                     <div
                       data-target="covenas-operaciones-36"
                       style="gap: 16px"
@@ -5768,6 +5763,10 @@
                       class="location-map-dot"
                     ></span>
                     <span
+                      style="--outline-color: #ff0000; left: 502px; top: 335px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
                       style="--outline-color: #ff0000; left: 382px; top: 435px"
                       class="location-map-dot"
                     ></span>
@@ -5831,7 +5830,7 @@
                   >
                     <!-- item 1 -->
                     <span
-                      style="--outline-color: #fc10ff; left: 188px; top: 303px"
+                      style="--outline-color: #fc10ff; left: 237px; top: 286px"
                       class="location-map-dot"
                     ></span>
                     <!-- item 2 -->
@@ -5851,7 +5850,7 @@
                     ></span>
                     <!-- item 5 -->
                     <span
-                      style="--outline-color: #fc10ff; left: 479px; top: 331px"
+                      style="--outline-color: #fc10ff; left: 470px; top: 324px"
                       class="location-map-dot"
                     ></span>
                     <!-- item 6 -->
@@ -6035,7 +6034,7 @@
                     id="covenas-monitoreo-14"
                   >
                     <span
-                      style="--outline-color: #a59eff; left: 865px; top: 384px"
+                      style="--outline-color: #a59eff; left: 865px; top: 372px"
                       class="location-map-dot"
                     ></span>
                   </div>
@@ -6044,8 +6043,19 @@
                     class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-monitoreo-15"
                   >
-                    <span
-                      style="--outline-color: #ffa921; left: 442px; top: 402px"
+                  <!--item 1-->  
+                  <span
+                      style="--outline-color: #ffa921; left: 468px; top: 327px"
+                      class="location-map-dot"
+                    ></span>
+                    <!--item 2-->  
+                  <span
+                      style="--outline-color: #ffa921; left: 478px; top: 330px"
+                      class="location-map-dot"
+                    ></span>
+                    <!--item 3-->  
+                  <span
+                      style="--outline-color: #ffa921; left: 488px; top: 333px"
                       class="location-map-dot"
                     ></span>
                   </div>
@@ -6056,7 +6066,7 @@
                     id="covenas-operaciones-1"
                   >
                     <span
-                      style="--outline-color: #27ff00; left: 462px; top: 336px"
+                      style="--outline-color: #27ff00; left: 508px; top: 329px"
                       class="location-map-dot"
                     ></span>
                   </div>
@@ -6066,11 +6076,11 @@
                     id="covenas-operaciones-2"
                   >
                     <span
-                      style="--outline-color: #27ff00; left: 486px; top: 346px"
+                      style="--outline-color: #27ff00; left: 492px; top: 337px"
                       class="location-map-dot"
                     ></span>
                     <span
-                      style="--outline-color: #27ff00; left: 498px; top: 352px"
+                      style="--outline-color: #27ff00; left: 506px; top: 341px"
                       class="location-map-dot"
                     ></span>
                   </div>
@@ -6134,10 +6144,36 @@
 
                   <div
                     class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-5"
+                  >
+                    <!-- item 1 -->
+                    <span
+                      style="--outline-color: #27ff00; left: 518px; top: 343px"
+                      class="location-map-dot"
+                    ></span>
+                    <!-- item 2 -->
+                    <span
+                      style="--outline-color: #27ff00; left: 533px; top: 347px"
+                      class="location-map-dot"
+                    ></span>
+                    <!-- item 3 -->
+                    <span
+                      style="--outline-color: #27ff00; left: 486px; top: 335px"
+                      class="location-map-dot"
+                    ></span>
+                    <!-- item 4 -->
+                    <span
+                      style="--outline-color: #27ff00; left: 502px; top: 340px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-6"
                   >
                     <span
-                      style="--outline-color: #27ff00; left: 406px; top: 320px"
+                      style="--outline-color: #27ff00; left: 454px; top: 330px"
                       class="location-map-dot"
                     ></span>
                   </div>
@@ -6172,8 +6208,24 @@
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-9"
                   >
+                  <!--item 1-->
                     <span
-                      style="--outline-color: #27ff00; left: 802px; top: 364px"
+                      style="--outline-color: #27ff00; left: 757px; top: 357px"
+                      class="location-map-dot"
+                    ></span>
+                    <!--item 2-->
+                    <span
+                      style="--outline-color: #27ff00; left: 770px; top: 360px"
+                      class="location-map-dot"
+                    ></span>
+                    <!--item 3-->
+                    <span
+                      style="--outline-color: #27ff00; left: 782px; top: 362px"
+                      class="location-map-dot"
+                    ></span>
+                    <!--item 4-->
+                    <span
+                      style="--outline-color: #27ff00; left: 795px; top: 365px"
                       class="location-map-dot"
                     ></span>
                   </div>
@@ -6211,10 +6263,26 @@
 
                   <div
                     class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-11"
+                  >
+                  <!--item 1-->
+                    <span
+                      style="--outline-color: #27ff00; left: 477px; top: 320px"
+                      class="location-map-dot"
+                    ></span>
+                    <!--item 2-->
+                    <span
+                      style="--outline-color: #27ff00; left: 462px; top: 326px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-12"
                   >
                     <span
-                      style="--outline-color: #27ff00; left: 467px; top: 323px"
+                      style="--outline-color: #27ff00; left: 477px; top: 319px"
                       class="location-map-dot"
                     ></span>
                   </div>
@@ -6225,6 +6293,22 @@
                   >
                     <span
                       style="--outline-color: #27ff00; left: 440px; top: 354px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-15"
+                  >
+                  <!--item 1-->
+                    <span
+                      style="--outline-color: #27ff00; left: 500px; top: 335px"
+                      class="location-map-dot"
+                    ></span>
+                    <!--item 2-->
+                     <span
+                      style="--outline-color: #27ff00; left: 500px; top: 335px"
                       class="location-map-dot"
                     ></span>
                   </div>
@@ -6254,7 +6338,7 @@
                     id="covenas-operaciones-17"
                   >
                     <span
-                      style="--outline-color: #27ff00; left: 436px; top: 349px"
+                      style="--outline-color: #27ff00; left: 455px; top: 339px"
                       class="location-map-dot"
                     ></span>
                   </div>
@@ -6264,7 +6348,7 @@
                     id="covenas-operaciones-18"
                   >
                     <span
-                      style="--outline-color: #27ff00; left: 510px; top: 354px"
+                      style="--outline-color: #27ff00; left: 515px; top: 347px"
                       class="location-map-dot"
                     ></span>
                   </div>
@@ -6290,7 +6374,7 @@
                     id="covenas-operaciones-20"
                   >
                     <span
-                      style="--outline-color: #27ff00; left: 542px; top: 337px"
+                      style="--outline-color: #27ff00; left: 530px; top: 334px"
                       class="location-map-dot"
                     ></span>
                   </div>
@@ -6422,6 +6506,22 @@
 
                   <div
                     class="dots-map-2024 dots-operaciones d-none"
+                    id="covenas-operaciones-29"
+                  >
+                  <!--item 1-->
+                    <span
+                      style="--outline-color: #21a605; left: 267px; top: 383px"
+                      class="location-map-dot"
+                    ></span>
+                    <!--item 2-->
+                    <span
+                      style="--outline-color: #21a605; left: 314px; top: 369px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-30"
                   >
                     <span
@@ -6445,7 +6545,7 @@
                     id="covenas-operaciones-32"
                   >
                     <span
-                      style="--outline-color: #21a605; left: 312px; top: 378px"
+                      style="--outline-color: #21a605; left: 299px; top: 372px"
                       class="location-map-dot"
                     ></span>
                   </div>
@@ -6491,7 +6591,7 @@
                     id="covenas-operaciones-36"
                   >
                     <span
-                      style="--outline-color: #21a605; left: 368px; top: 456px"
+                      style="--outline-color: #21a605; left: 351px; top: 473px"
                       class="location-map-dot"
                     ></span>
                   </div>
@@ -6501,7 +6601,7 @@
                     id="covenas-operaciones-37"
                   >
                     <span
-                      style="--outline-color: #21a605; left: 349px; top: 477px"
+                      style="--outline-color: #21a605; left: 351px; top: 450px"
                       class="location-map-dot"
                     ></span>
                   </div>
@@ -6750,7 +6850,7 @@
                     <a
                       download
                       href="/assets/docs/covenas/interno/PCP-TCOV-02_derrame de crudo_ajuste 2024.pdf"
-                      style="--outline-color: none; left: 418px; top: 269px"
+                      style="--outline-color: none; left: 418px; top: 260px"
                       class="location-map-dot dot-image"
                     >
                       <img src="/assets/img/map-punto-control.svg" alt="" />
@@ -6760,7 +6860,7 @@
                     <a
                       download
                       href="/assets/docs/covenas/interno/PCP-TCOV-02_derrame de diluyente_ajuste 2024.pdf"
-                      style="--outline-color: none; left: 412px; top: 292px"
+                      style="--outline-color: none; left: 412px; top: 285px"
                       class="location-map-dot dot-image"
                     >
                       <img src="/assets/img/map-punto-control.svg" alt="" />
@@ -8697,7 +8797,7 @@
                     <!-- Item 1 -->
                     <span style="--outline-color: #ff0000;left: 366px;top: 328px;" class="location-map-dot"></span>
                     <!-- Item 2 -->
-                    <span style="--outline-color: #ff0000;left: 410px;top: 306px;" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000;left: 415px;top: 301px;" class="location-map-dot"></span>
                     <!-- Item 3 -->
                     <span style="--outline-color: #ff0000;left: 517px;top: 374px;" class="location-map-dot"></span>
                     <!-- Item 4 -->
@@ -8930,7 +9030,7 @@
                     Permiso de Emisiones Atmosféricas
                   </h5>
                   <p class="text-light">(Resolución 1554 de 2018)</p>
-                  <a class="button-oc-2024 color-light my-2 d-inline-block" href
+                  <a class="button-oc-2024 color-light my-2 d-inline-block" href ="/assets/docs/covenas/permisos/2018_PE_Coveñas.pdf" target="_blank"
                     >Ver más</a
                   >
                 </div>
@@ -8951,7 +9051,7 @@
                     Permiso de Vertimientos
                   </h5>
                   <p class="text-light">(Resolución 2-9405 de 2022)</p>
-                  <a class="button-oc-2024 color-light my-2 d-inline-block" href
+                  <a class="button-oc-2024 color-light my-2 d-inline-block" href="/assets/docs/covenas/permisos/R_2-9405_2022_VIGENTE.pdf" target="_blank"
                     >Ver más</a
                   >
                 </div>
