fix: finish coveñas adjust

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -317,7 +317,8 @@
             <a
               style="white-space: nowrap"
               class="d-block button-oc-2024 mt-3"
-              href
+              href="/assets/img/covenas/covenas-flora-fauna.png"
+              target="_blank"
               >Ver más</a
             >
           </div>
@@ -1400,7 +1401,7 @@
                       class="accordion-title d-flex d-md-block align-items-center justify-content-between card-interactive-icons___title font-weight-bold text-gray-light-ocensa"
                     >
                       <span class="accordion-title__text"
-                        >Cambio <br class="d-none d-lg-block" />
+                        >Cambio <br class="d-none d-md-block">
                         Climático</span
                       >
                       <span class="accordion-title__arrow d-block d-md-none">
@@ -1740,7 +1741,7 @@
                     <h6
                       class="card-interactive-icons___title font-weight-bold text-gray-light-ocensa"
                     >
-                      Gestión Integral de Residuos
+                      Gestión Integral <br class="d-none d-md-block"> de Residuos
                     </h6>
 
                     <div
@@ -2294,7 +2295,7 @@
                       <div class="card-interactive-icons___box-description">
                         <p>
                           Bombas <br />
-                          Verticales Dilucion
+                          Verticales Dilución
                         </p>
                       </div>
                     </div>
@@ -4779,13 +4780,14 @@
                             width="33.999"
                             height="33.999"
                             viewBox="0 0 33.999 33.999"
+                            style="overflow: visible;"
                           >
                             <g data-name="Grupo 645">
                               <path
                                 data-name="Sustracción 3"
                                 d="M-7471 418.494a16.881 16.881 0 0 1-12.016-4.978 16.887 16.887 0 0 1-4.984-12.022 16.888 16.888 0 0 1 4.979-12.021 16.889 16.889 0 0 1 12.021-4.979z"
                                 transform="translate(7488 -384.494)"
-                                style="fill: #0036ff"
+                                style="fill: #0036ff; stroke: #ffffff; stroke-width: 1px;"
                               />
                               <path
                                 data-name="Sustracción 4"
@@ -6297,20 +6299,11 @@
                     ></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-operaciones d-none"
-                    id="covenas-operaciones-15"
-                  >
-                  <!--item 1-->
-                    <span
-                      style="--outline-color: #27ff00; left: 500px; top: 335px"
-                      class="location-map-dot"
-                    ></span>
+                  <div class="dots-map-2024 dots-operaciones d-none" id="covenas-operaciones-15">
+                    <!--item 1-->
+                      <span style="--outline-color: #27ff00;left: 463px;top: 343px;" class="location-map-dot"></span>
                     <!--item 2-->
-                     <span
-                      style="--outline-color: #27ff00; left: 500px; top: 335px"
-                      class="location-map-dot"
-                    ></span>
+                      <span style="--outline-color: #27ff00;left: 451px;top: 354px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6570,20 +6563,11 @@
                     ></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-operaciones d-none"
-                    id="covenas-operaciones-35"
-                  >
+                  <div class="dots-map-2024 dots-operaciones d-none" id="covenas-operaciones-35">
                     <!-- item 1 -->
-                    <span
-                      style="--outline-color: #21a605; left: 379px; top: 433px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #21a605; left: 379px; top: 433px" class="location-map-dot"></span>
                     <!-- item 2 -->
-                    <span
-                      style="--outline-color: #21a605; left: 481px; top: 265px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #21a605;left: 476px;top: 264px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6848,7 +6832,7 @@
                     id="covenas-sre-4"
                   >
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/covenas/interno/PCP-TCOV-02_derrame de crudo_ajuste 2024.pdf"
                       style="--outline-color: none; left: 418px; top: 260px"
                       class="location-map-dot dot-image"
@@ -6858,7 +6842,7 @@
                     </a>
 
                     <a
-                      download
+                      target="_blank"
                       href="/assets/docs/covenas/interno/PCP-TCOV-02_derrame de diluyente_ajuste 2024.pdf"
                       style="--outline-color: none; left: 412px; top: 285px"
                       class="location-map-dot dot-image"
@@ -6870,7 +6854,7 @@
 
                   <div class="dots-map-2024 dots-monitoreo d-none" id="covenas-sre-5">
                     <a
-                      download=""
+                      target="_blank"
                       href="/assets/docs/covenas/externo/PCE-TCOV-POAES-01 ajuste 2024.pdf"
                       style="--outline-color: none; left: 354px; top: 273px"
                       class="location-map-dot dot-image"
@@ -6882,7 +6866,7 @@
                       <span class="dot-image-text">PCE 1 +</span>
                     </a>
                     <a
-                      download=""
+                      target="_blank"
                       href="/assets/docs/covenas/externo/PCE-TCOV-02 ajuste 2024.pdf"
                       style="--outline-color: none; left: 376px; top: 250px"
                       class="location-map-dot dot-image"
