fix: adjust cusiana final 1

--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -38,16 +38,12 @@
                 Línea sur / Segmento 1
               </h2>
               <p class="banner-principal__description text-light">
-                A cinco minutos de Tauramena está la estación Cusiana, que
-                aporta el 50% del transporte del oleoducto, recibe producción de
-                los campos Cusiana y Cupiagua, de las líneas ODL y Araguaney, y
-                cuenta con un descargadero para 80.000 barriles diarios.
+                A solo cinco minutos de Tauramena se encuentra la estación Cusiana. Esta aporta el 50% de los volúmenes transportados por el oleoducto y recibe la producción de los campos Cusiana, Cupiagua, recibo de las líneas ODL y Araguaney. Asimismo, cuenta con un descargadero de carro tanques con capacidad para recibir hasta 80.000 barriles diarios.
               </p>
               <div style="gap: 10px; box-sizing: border-box"
                 class="d-flex flex-row mt-3 mt-lg-5 mb-5 mb-lg-0 certifieds">
                 <img class="img-fluid" src="/assets/img/grupo-765.webp" alt />
-                <img style="opacity: .6;" class="img-fluid"
-                  src="/assets/img/cusiana/ahorra-o-nunca.svg" alt />
+                <img class="img-fluid" src="/assets/img/cusiana/ahorra-o-nunca.svg" alt />
                 <img class="img-fluid"
                   src="/assets/img/cusiana/repite-el-ciclo.svg" alt />
                 <img class="img-fluid"
