--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -317,7 +317,7 @@
             <a
               style="white-space: nowrap"
               class="d-block button-oc-2024 mt-3"
-              href
+              href ="/assets/img/covenas/COVEÑAS-fyf.png" target="_blank"
               >Ver más</a
             >
           </div>
