fix: ajustes miraflores SRE, pendiente slide 66

--- a/pages/miraflores/index.html
+++ b/pages/miraflores/index.html
@@ -3155,12 +3155,12 @@
 
                                     <div class="row mt-3">
                                         <div class="col-12 col-lg-6">
-                                            <div data-target="cusiana-sre-10"
+                                            <div data-target="miraflores-sre-10"
                                                 style="gap: 16px"
                                                 class="d-flex align-items-center card-interactive-icons__container">
                                                 <div
                                                     class="card-interactive-icons___box-icon"
-                                                    style="--border-fill: #21a605; --hover-color: #ffffff;">
+                                                    style="--border-fill: #acff9c; --hover-color: #ffffff;">
                                                     <svg
                                                         xmlns="http://www.w3.org/2000/svg"
                                                         width="29"
@@ -4372,7 +4372,7 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-sre-4">
                                         <a
-                                            download
+                                            target="_blank"
                                             href="/assets/docs/miraflores/interno/PCP-EMIR-01 ajuste 2024.pdf"
                                             style="--outline-color: none; left: 609px; top: 276px"
                                             class="location-map-dot dot-image">
@@ -4383,7 +4383,7 @@
                                                 +</span>
                                         </a>
                                         <a
-                                            download
+                                            target="_blank"
                                             href="/assets/docs/miraflores/interno/PCP-EMIR-02 ajuste 2024.pdf"
                                             style="--outline-color: none; left: 660px; top: 250px"
                                             class="location-map-dot dot-image">
@@ -4394,7 +4394,7 @@
                                                 +</span>
                                         </a>
                                         <a
-                                            download
+                                            target="_blank"
                                             href="/assets/docs/miraflores/interno/PCP-EMIR-03 ajuste 2024.pdf"
                                             style="--outline-color: none; left: 845px; top: 317px"
                                             class="location-map-dot dot-image">
@@ -4411,7 +4411,7 @@
                                         id="cusiana-sre-5">
                                         <!--item 1-->
                                         <a
-                                            download
+                                            target="_blank"
                                             href="/assets/docs/miraflores/externo/PCE-EMIR-01 2024 ajuste 2024.pdf"
                                             style="--outline-color: none; left: 901px; top: 280px"
                                             class="location-map-dot dot-image">
@@ -4423,7 +4423,7 @@
                                         </a>
                                         <!--item 2-->
                                         <a
-                                            download
+                                            target="_blank"
                                             href="/assets/docs/miraflores/externo/PCE-EMIR-02 2024 ajuste 2024.pdf"
                                             style="--outline-color: none; left: 923px; top: 338px"
                                             class="location-map-dot dot-image">
@@ -4435,7 +4435,7 @@
                                         </a>
                                         <!--item 3-->
                                         <a
-                                            download
+                                            target="_blank"
                                             href="/assets/docs/miraflores/externo/PCE-EMIR-03 2024 ajuste 2024.pdf"
                                             style="--outline-color: none; left: 955px; top: 308px"
                                             class="location-map-dot dot-image">
@@ -4513,25 +4513,15 @@
                                         </span>
                                     </div>
 
-                                    <div
-                                        class="dots-map-2024 dots-monitoreo d-none"
-                                        id="cusiana-sre-10">
+                                    <div class="dots-map-2024 dots-monitoreo d-none" id="miraflores-sre-10">
                                         <!--item 1-->
-                                        <span
-                                            style="--outline-color: #21a605; left: 721px; top: 355px"
-                                            class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 748px;top: 351px;" class="location-map-dot"></span>
                                         <!--item 2-->
-                                        <span
-                                            style="--outline-color: #21a605; left: 855px; top: 324px"
-                                            class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605; left: 855px; top: 324px" class="location-map-dot"></span>
                                         <!--item 3-->
-                                        <span
-                                            style="--outline-color: #21a605; left: 539px; top: 246px"
-                                            class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 540px;top: 247px;" class="location-map-dot"></span>
                                         <!--item 4-->
-                                        <span
-                                            style="--outline-color: #21a605; left: 355px; top: 351px"
-                                            class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 365px;top: 245px;" class="location-map-dot"></span>
                                     </div>
 
                                     <div
