--- a/pages/miraflores/index.html
+++ b/pages/miraflores/index.html
@@ -6443,8 +6443,9 @@
                                     <p class="text-light">(Resolución 0724 de
                                         2022)</p>
                                     <a
+                                        target="_blank"
                                         class="button-oc-2024 color-light my-2 d-inline-block"
-                                        href>Ver más</a>
+                                        href="/assets/docs/miraflores/licencias/permiso-de-emisiones/R_0724_2022_VIGENTE.pdf">Ver más</a>
                                 </div>
                             </div>
 
@@ -6464,7 +6465,8 @@
                                         2021)</p>
                                     <a
                                         class="button-oc-2024 color-light my-2 d-inline-block"
-                                        href>Ver más</a>
+                                        target="_blank"
+                                        href="/assets/docs/miraflores/licencias/permisos-vertimiento/R_1928_2021_VIGENTE.pdf">Ver más</a>
                                 </div>
                             </div>
                         </div>
